<resources>
    <string name="app_name">GSB</string>
    <string name="se_connecter">Se connecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="logo_description">logo GSB</string>
    <string name="mot_de_passe_oublie">Mot de passe oublié</string>
    <string name="connexion_en_cours">Connexion en cours...</string>
    <string name="gestion_medicaments">Gestion des médicaments</string>
    <string name="suivi_dates_expiration">Suivi dates d\'expiration</string>
    <string name="recherche_avancee">Recherche avancée</string>
    <string name="gestion_alertes_stock">Gestion Alertes de stock</string>
    <string name="profile">Profile</string>
    <string name="parametre">Paramètre</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="retour">Retour</string>
    <string name="modifier">Modifier</string>
    <string name="nom">Nom</string>
    <string name="email_profile">Email :</string>
    <string name="role">Rôle :</string>
    <string name="prenom">Prénom</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="annuler">Annuler</string>
    <string name="gestion_des_utilisateurs">Gestion des utilisateurs</string>
    <string name="liste_des_utilisateurs">Liste des Utilisateurs</string>
    <string name="ajouter_un_utilisateur">Ajouter un Utilisateur</string>
    <string name="creer_un_utilisateur">Créer un utilisateur</string>
    <string name="creer_utilisateur">Créer Utilisateur</string>
    <string name="confimer_le_mot_de_passe">Confimer le mot de passe</string>
    <string name="edit_user">Edit User</string>
    <string name="delete_user">Delete User</string>
    <string name="modifier_un_utilisateur">Modifier un utilisateur</string>
    <string name="medicaments">Médicaments</string>
    <string name="ajouter_un_medicament">Ajouter un médicament</string>
    <string name="nom_du_medicament">Nom du Médicament :</string>
    <string name="quantite">Quantité :</string>
    <string name="categorie">Catégorie :</string>
    <string name="date_d_expiration">Date d\'expiration :</string>
    <string name="quantiteAdd">Quantité</string>
    <string name="date_dExpiration">Date d\'expiration</string>
    <string name="alerte_stock">Alerte Stock :</string>
    <string name="quantite_minimum_pour_alerte">Quantité minimum pour alerte</string>
    <string name="alerte_stock_detail_medicament">Alerte Stock :</string>
    <string name="name_editMedicament">Nom :</string>
    <string name="categoriesList">Catégories</string>
    <string name="modification_medicament">Modification médicament</string>
    <string name="ajouter_une_categorie">Ajouter une catégorie</string>
    <string name="modifier_la_categorie">Modifier la catégorie</string>
    <string name="supprimer_la_categorie">Supprimer la catégorie</string>
    <string name="categories">Catégories</string>
    <string name="nouvelle_categorie">Nouvelle catégorie</string>
    <string name="nomCategorie">Nom :</string>
    <string name="modification_d_une_categorie">Modification d\'une catégorie</string>
    <string name="filtrer_par_categorie">Filtrer par catégorie :</string>
    <string name="alertes">Alertes</string>
    <string name="info_alerte">info alerte</string>
</resources>