<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:elevation="4dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/retour"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter_un_medicament"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- ScrollView pour occuper tout l'écran -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="34dp"
            android:gravity="center">

            <!-- Champ Name -->
            <TextView
                android:id="@+id/textViewNameMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom_du_medicament"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextNameMedicament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="textPersonName"/>

            <!-- Champ Nom de Famille -->
            <TextView
                android:id="@+id/textViewQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantite"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantiteAdd"
                android:inputType="number"/>

            <!-- Sélecteur de Rôle -->
            <TextView
                android:id="@+id/textViewCategories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categorie"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:id="@+id/spinnerCategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Champ Mot de Passe -->
            <TextView
                android:id="@+id/textViewAddDateExpiration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_d_expiration"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextDateExpiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_dExpiration"
                android:inputType="date"
                />

            <!-- Champ confirm Mot de Passe -->
            <TextView
                android:id="@+id/textViewAlerteStock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alerte_stock"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextAlerteStock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantite_minimum_pour_alerte"
                android:inputType="number"
                android:layout_marginBottom="20dp"/>

            <!-- Boutons Enregistrer et Annuler -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/buttonCancelMedicament"
                    style="@style/buttonLogout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/annuler" />

                <Button
                    android:id="@+id/buttonSaveMedicament"
                    style="@style/gsbButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enregistrer"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
