<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:elevation="4dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/retour"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start"
            />

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modifier"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- ScrollView pour occuper tout l'écran -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="34dp"
            android:gravity="center"
            >

            <EditText
                android:id="@+id/editFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom"
                android:textSize="26sp"
                android:layout_marginTop="110dp"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/editLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:textSize="26sp"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_profile"
                android:inputType="textEmailAddress"
                android:textSize="26sp"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nouveau_mot_de_passe"
                android:inputType="textPassword"
                android:textSize="26sp"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nouveau_mot_de_passe"
                android:inputType="textPassword"
                android:textSize="26sp"
                android:padding="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enregistrer"
                style="@style/gsbButton"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/buttonCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annuler"
                style="@style/buttonLogout"
                android:layout_marginTop="20dp"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
