<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="4dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/retour"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/textViewEditCategorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/modification_d_une_categorie"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>

    <!-- ScrollView pour occuper tout l'écran -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="34dp"
            android:gravity="center">

            <!-- Champ Name -->
            <TextView
                android:id="@+id/textViewNameEditCategorie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomCategorie"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextNameEditCategorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="textPersonName"/>
            <!-- Boutons Enregistrer et Annuler -->

            <Button
                android:id="@+id/buttonSaveEditCategorie"
                style="@style/gsbButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/enregistrer"
                android:layout_marginTop="25dp"
                />

            <Button
                android:id="@+id/buttonCancelEditCategorie"
                style="@style/buttonLogout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/annuler"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>