<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:elevation="4dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/retour"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/textViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creer_un_utilisateur"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- ScrollView pour occuper tout l'écran -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="34dp"
            android:gravity="center">

            <!-- Champ Prénom -->
            <TextView
                android:id="@+id/textViewFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prenom"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prenom"
                android:inputType="textPersonName"/>

            <!-- Champ Nom de Famille -->
            <TextView
                android:id="@+id/textViewLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom"
                android:inputType="textPersonName"/>

            <!-- Champ Email -->
            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <!-- Sélecteur de Rôle -->
            <TextView
                android:id="@+id/textViewRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/role"
                android:layout_marginTop="20dp"/>

            <Spinner
                android:id="@+id/spinnerRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- Champ Mot de Passe -->
            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                />

            <!-- Champ confirm Mot de Passe -->
            <TextView
                android:id="@+id/textViewConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mot_de_passe"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confimer_le_mot_de_passe"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp"/>

            <!-- Boutons Enregistrer et Annuler -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/buttonSaveUser"
                    style="@style/gsbButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/enregistrer"/>

                <Button
                    android:id="@+id/buttonCancel"
                    style="@style/buttonLogout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/annuler"
                    android:layout_marginStart="16dp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
