<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:elevation="4dp">

        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="@string/retour"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="start" />

        <TextView
            android:id="@+id/textViewEditMedicament"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nom du Médicament"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Contenu principal -->
    <ScrollView
        android:id="@+id/scrollViewEditMedicament"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="20dp">

            <!-- Quantité -->
            <TextView
                android:id="@+id/textViewNameEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_editMedicament"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:paddingTop="16dp" />

            <EditText
                android:id="@+id/nameEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="Dolipranne"
                android:inputType="text"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="4dp" />

            <!-- Quantité -->
            <TextView
                android:id="@+id/textViewQuantiteEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantite"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:paddingTop="16dp" />

            <EditText
                android:id="@+id/quantiteEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="100"
                android:inputType="number"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="4dp" />

            <!-- Catégorie -->
            <TextView
                android:id="@+id/textViewCategorieEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categorie"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:paddingTop="20dp" />

            <Spinner
                android:id="@+id/categorieEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="4dp" />

            <!-- Date d'Expiration -->
            <TextView
                android:id="@+id/textViewDateExpirationEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_d_expiration"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/dateExpirationEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="12/2025"
                android:inputType="date"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="4dp" />

            <!-- Alerte Stock -->
            <TextView
                android:id="@+id/textViewAlerteStockEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alerte_stock_detail_medicament"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/darker_gray"
                android:paddingTop="20dp" />

            <EditText
                android:id="@+id/alerteStockEditMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="50"
                android:inputType="number"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:layout_marginTop="4dp" />

            <!-- Bouton Enregistrer -->
            <Button
                android:id="@+id/btnEnregistrerEditMedicament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enregistrer"
                android:layout_marginTop="24dp"
                style="@style/gsbButton"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp" />
            <Button
                android:id="@+id/btnAnnulerEditMedicament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/annuler"
                android:layout_marginTop="4dp"
                style="@style/buttonLogout"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>